# API-BOTPI

./: .gitignore  README.md  install.sh  package.json  pyproject.toml
api_bot/cli/: commands.py
api_bot/core/: discovery_bot.py  key_manager.py
api_bot/gui/: app.py
api_bot/web/: __init__.py  app.py
apibotpi/: __init__.py  apis.json  beginner.py  call.py  install_api.py  registry.py  search.py
migrations/: 001_provenance_and_rankings.sql  002_beginner_metadata.sql
queries/: facet_filter.sql
tests/: test_key_manager_resilient.py  test_search_history.py  test_web_app.py
